--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 Arcs/*
-src/main/java/frc/arcs/*
+#src/main/java/frc/arcs/*
 
 # Created by https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
 
